--- a/styles/css.css
+++ b/styles/css.css
@@ -34,8 +34,11 @@ nav{
 	text-transform: uppercase;
 	letter-spacing: 5px;
 	font-size: 24px;
+}
+
+.logo a{
+	text-decoration: none;
 	color: #fff;
-	z-index: ;
 }
 
 .nav-links{
@@ -115,6 +118,7 @@ nav{
 .burger{
 	width: 22px;
 	height: 24px;
+	margin: 5px;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-around;
@@ -129,9 +133,17 @@ nav{
 	transition: all 0.8s;
 }
 
+.nav-active .burger-line1{
+	transform: rotateZ(-405deg) translate(-5px, 6px);
+}
 
+.nav-active .burger-line2{
+	opacity: 0;
+}
 
-
+.nav-active .burger-line3{
+	transform: rotateZ(405deg) translate(-5px, -6px);
+}
 
 .title{
 	width: 100%;
@@ -152,20 +164,93 @@ nav{
 	margin: 10px;
 }
 
-
-
-
-
-.nav-active .burger-line1{
-	transform: rotateZ(-405deg) translate(-5px, 6px);
+.img-wrapper{
+	width: 100%;
+	height: auto;
+	background-size: contain;
+	overflow: hidden;
 }
 
-.nav-active .burger-line2{
-	opacity: 0;
+.img-wrapper img{
+	width: 100%;
+	height: auto;
+	display: block;
 }
 
-.nav-active .burger-line3{
-	transform: rotateZ(405deg) translate(-5px, -6px);
+.video-wrapper {
+	position: relative;
+	overflow: hidden;
+	width: 100%;
+	margin: 0 auto;
+	padding-top: 56.25%;
+	margin-top: 15px;
+}
+
+.video-wrapper iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+
+.blogs-intro{
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+}
+
+.mobile-hide {
+	display: none;
+}
+
+.thumbnail{
+	background-color: black;
+	position: relative;
+	overflow: hidden;
+	margin-top: 15px;
+}
+
+.thumbnail img{
+	opacity: 0.5;
+}
+
+.additional {
+	position: absolute;
+	color: #eee;
+	text-align: center;
+	top: 0;
+	width: 100%;
+	padding-top: 10vw;
+}
+
+.additional h3{
+	font-size: 5.5vw;
+	background: #13171d;
+	display: inline-block;
+	padding: .3em .5em;
+}
+
+.additional p{
+	font-size: 3.5vw;
+	margin: 0.5em 0 2em 0;
+}
+
+.additional a{
+	display: inline-block;
+	background-color: #fff;
+	text-transform: uppercase;
+	text-decoration: none;
+	padding: .5em;
+	color: black;
+	border-radius: 4px;
+}
+
+.additional a:last-child{
+	background: none;
+	border: 1px solid #fff;
+	color: #fff;
+	margin-left: 5px;
 }
 
 @media screen and (min-width: 768px){
@@ -179,6 +264,75 @@ nav{
 
 	.title .subtitle{
 		font-size: 25px;
+	}
+
+	.content-wrapper{
+		margin-top: 30px;
+	}
+
+	.me-content {
+		display: flex;
+		flex-direction: row;
+		width: 100%;
+		align-items: center;
+	}
+
+	.left-container{
+		flex: 1;
+	}
+
+	.right-container{
+		flex: 2;
+		display: flex;
+		flex-direction: column;
+	}
+	
+	.mobile-hide{
+		display: block;
+	}
+
+	.videos-intro{
+		display: flex;
+		flex-direction: row;
+	}
+
+	.video-wrapper{
+		padding-top: 28.125%;
+		margin-top: 0;
+	}
+
+	.video-wrapper iframe{
+		height: 100%;
+	}
+
+	.blogs-intro{
+		display: flex;
+		flex-direction: row;
+		justify-content: space-around;
+	}
+	
+	.thumbnail{
+		margin-top: 0;
+	}
+
+	.additional {
+		padding-top: 3vw;
+	}
+
+	.additional h3{
+		font-size: 2vw;
+		padding: .3em .5em;
+	}
+
+	.additional p{
+		font-size: 1.5vw;
+		margin: 0.5em 0 2em 0;
+	}
+
+	.additional a{
+		padding: .5em;
+		color: black;
+		border-radius: 4px;
 	}
 }
 
@@ -224,5 +378,103 @@ nav{
 
 	.title .subtitle{
 		font-size: 25px;
+	}
+
+	.thumbnail{
+		background-color: #aa4b6b;
+		transition: background-color 0.5s;
+		position: relative;
+		overflow: hidden;
+	}
+
+	.thumbnail img{
+		opacity: .9;
+		transform: scale(1.15);
+		transition: all .5s;
+	}
+
+	.additional{
+		position: absolute;
+		color: #eee;
+		text-align: center;
+		top: 0;
+		width: 100%;
+		padding-top: 3vw;
+		opacity: 1;
+		transform: scale(1.3);
+		transition: all .5s;
+	}
+
+	.additional h3{
+		font-size: 1.5vw;
+		background: #13171d;
+		display: inline-block;
+		padding: .3em .5em;
+		opacity: 1;
+		transition: all .5s;
+	}
+
+	.additional p{
+		font-size: 1.2vw;
+		margin: 0.5em 0 2em 0;
+		opacity: 0;
+		transition: all .5s;
+	}
+
+	.additional a{
+		display: inline-block;
+		background-color: #fff;
+		text-transform: uppercase;
+		text-decoration: none;
+		padding: .5em;
+		color: black;
+		border-radius: 4px;
+		opacity: 0;
+		transition: all .5s;
+	}
+
+	.additional a:last-child{
+		background: none;
+		border: 1px solid #fff;
+		color: #fff;
+		margin-left: 5px;
+	}
+
+	.thumbnail:hover{
+		background-color: black;
+	}
+
+	.thumbnail:hover img{
+		transform: translate3d(0, 0, 0) scale(1);
+		opacity: 0.5;
+	}
+
+	.thumbnail:hover .additional{
+		opacity: 1;
+		transform: scale(1);
+	}
+
+	.thumbnail:hover .additional p{
+		opacity: 1;
+		transform: scale(1);
+	}
+
+	.thumbnail:hover .additional a{
+		opacity: 1;
+		transform: scale(1);
+	}
+
+	.thumbnail:hover .additional a:last-child:hover{
+		background-color: white;
+		color: black;
+	}
+
+	.intro-picture img{
+		transform: scale(1);
+		transition: all .5s;
+	}
+
+	.intro-picture img:hover{
+		transform: scale(1.15) rotateZ(2deg);
 	}
 }
