--- a/styles/css.css
+++ b/styles/css.css
@@ -439,9 +439,8 @@ nav{
 	position: absolute;
 	top: 50%;
 	left: 50%;
-	transform: translateX(-50%);
-	transform: translateY(-50%);
-	opacity: .7;
+	transform: translate(-50%, -50%);
+	opacity: .8;
 }
 
 .portf-videos .vid .video-caption{
@@ -455,6 +454,7 @@ nav{
 	text-transform: uppercase;
 	color: #fff;
 	font-size: 24px;
+	text-shadow: 4px 4px 16px rgba(0,0,0,0.7);
 }
 
 .portf-videos .vid .video-caption p{
@@ -463,6 +463,71 @@ nav{
 	font-weight: 700;
 }
 
+.popup {
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	z-index: 999;
+	background: rgba(0,0,0,0.95);
+	width: 100%;
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	cursor: default;
+	visibility: hidden;
+	opacity: 0;
+	transition: all 0.4s;
+}
+
+.popup.active{
+	visibility: visible;
+	opacity: 1;
+}
+
+.popup .video-wrapper{
+	position: relative;
+	max-width: 100%;
+	outline: none;
+}
+
+.popup .video-wrapper iframe{
+	position: absolute;
+}
+
+.popup .close-popup{
+	position: fixed;
+	top: 0;
+	right: 5px;
+	width: 26px;
+	height: 28px;
+	margin: 20px;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	cursor: pointer;
+	z-index: 1000;
+}
+
+.popup .close-popup .line{
+	width: 100%;
+	height: 2px;
+	background-color: #fff;
+	transition: all 0.8s;
+}
+
+.popup .close-popup .line:nth-child(1){
+	transform: rotate(45deg) translate(10px, 0px);
+}
+
+.popup .close-popup .line:nth-child(2){
+	transform: rotate(-45deg) translate(10px, 0px);
+}
+
+.gif-wrapper{
+	display: none;
+}
 
 @media screen and (min-width: 768px){
 	.nav-links{
@@ -678,6 +743,10 @@ nav{
 	.portf-videos .vid{
 		flex-basis: 33% !important;
 		margin: 0;
+	}
+
+	.popup .video-wrapper{
+		max-width: 50%;
 	}
 }
 
@@ -897,4 +966,34 @@ nav{
 		opacity: 0;
 	}
 
+	.portf-videos .img-wrapper{
+		transition: all 0.5s;
+	}
+
+	.gif-wrapper{
+		display: initial;
+		position: absolute;
+		overflow: hidden;
+		width: 100%;
+		margin: 0 auto;
+		padding-top: 56.25%;
+		opacity: 0;
+		transition: all 0.5s;
+	}
+
+	.gif-wrapper video{
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+	}
+
+	.portf-videos .vid:hover .img-wrapper{
+		opacity: 0;
+	}
+
+	.portf-videos .vid:hover .gif-wrapper{
+		opacity: 1;
+	}
 }
