--- a/styles/css.css
+++ b/styles/css.css
@@ -654,6 +654,89 @@ nav{
 	margin-top: 60px;
 }
 
+.contacts-container{
+	display: flex;
+	flex-direction: column;
+}
+
+.contacts-container .contacts-text{
+	flex: 1;
+}
+
+.contacts-container .contacts-form{
+	flex: 1;
+}
+
+.contacts-container .contacts-text h3{
+	color: #fff;
+	font-size: 24px;
+	margin: 0 10px 28px 10px;
+}
+
+.contacts-container .contacts-text p{
+	color: #8d949e;
+	font-size: 16px;
+	font-weight: 300;
+	letter-spacing: 1px;
+	line-height: 28px;
+	margin: 0 10px 28px 10px;
+}
+
+.form{
+	margin: 10px;
+}
+
+.form p{
+	color: #fff;
+	font-size: 20px;
+	margin: 0 0 10px 10px;
+}
+
+.form input, textarea{
+	background-color: rgba(27, 33, 41, 0.8);
+	width: 100%;
+	border: none;
+	color: #fce8eb;
+	font-size: 16px;
+	line-height: 20px;
+	vertical-align: middle;
+	padding: 14px;
+	border: 2px solid transparent;
+	transition: border 0.4s ease-in;
+	resize: vertical;
+	margin-bottom: 30px;
+}
+
+.form input::placeholder, textarea::placeholder{
+	color: #8d949e;
+}
+
+.form textarea{
+	height: 150px;
+}
+
+.form input:focus, textarea:focus{
+	outline: none;
+	border: 2px solid #E94057;
+}
+
+.form .btn-submit{
+	text-transform: uppercase;
+	text-decoration: none;
+	color: #E94057;
+	font-weight: 700;
+	font-size: 16px;
+	letter-spacing: 1px;
+	box-sizing: border-box;
+	display: inline-block;
+	padding: 15px;
+	border: 2px solid #3b3f45;
+	background-color: transparent;
+	border-image: linear-gradient(45deg, #8A2387 , #F27121) 10% stretch;
+	cursor: pointer;
+}
+
+
 @media screen and (min-width: 768px){
 	.nav-links{
 		width: 40%;
@@ -921,6 +1004,10 @@ nav{
 		margin: 0 auto;
 		margin-top: 50px;
 	}
+
+	.contacts-container{
+		flex-direction: row;
+	}
 }
 
 @media screen and (min-width: 1024px){
@@ -1182,5 +1269,27 @@ nav{
 	.each-blog{
 		width: 60%;
 		margin: 0 auto;
+	}
+
+	.form .btn-submit{
+		text-transform: uppercase;
+		text-decoration: none;
+		color: #8d949e;
+		font-weight: 700;
+		font-size: 16px;
+		letter-spacing: 1px;
+		box-sizing: border-box;
+		display: inline-block;
+		padding: 15px;
+		margin-top: 10px;
+		border: 2px solid #3b3f45;
+		background-color: transparent;
+		border-image: linear-gradient(45deg, #8A2387 , #F27121) 10% stretch;
+		transition: color 0.3s;
+		cursor: pointer;
+	}
+
+	.form .btn-submit:hover{
+		color: #E94057;
 	}
 }
